/*
 * AI Interview Platform - Backend Application
 * Spring Boot 4.1 + Java 21 + Spring AI 2.0 + PostgreSQL + pgvector + RustFS + Redis
 */

plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
}

group = 'com.interview'
version = '0.0.1-SNAPSHOT'

repositories {
    maven { url = uri('https://maven.aliyun.com/repository/public/') }
    maven { url = uri('https://maven.aliyun.com/repository/spring/') }
    maven { url = uri('https://maven.aliyun.com/repository/gradle-plugin/') }
    mavenCentral()
    maven { url = uri('https://repo.spring.io/milestone') }
}

dependencies {
    // Spring Boot Starters (Boot 4 modular design)
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // H2 Database for testing
    testRuntimeOnly 'com.h2database:h2'

    // spring-ai-agent-utils BOM (version alignment)
    implementation platform(libs.spring.ai.agent.utils.bom)

    // Spring AI 2.0 - OpenAI兼容模式 (阿里云DashScope)
    implementation "org.springframework.ai:spring-ai-starter-model-openai:${libs.versions.springAi.get()}"
    // Spring AI 2.0 - PostgreSQL Vector Store (pgvector)
    implementation "org.springframework.ai:spring-ai-starter-vector-store-pgvector:${libs.versions.springAi.get()}"
    // spring-ai-agent-utils core library
    implementation libs.spring.ai.agent.utils

    // Apache Tika for document parsing (PDF, DOCX, TXT)
    implementation libs.tika.core
    implementation libs.tika.parsers

    // AWS S3 SDK for RustFS storage
    implementation "software.amazon.awssdk:s3:${libs.versions.aws.sdk.get()}"

    // Pinyin4j - 汉字转拼音
    implementation libs.pinyin4j

    // SpringDoc OpenAPI - Swagger接口文档
    implementation libs.springdoc

    // Redisson 4.0 - Redis客户端 (Boot 4 compatible)
    implementation "org.redisson:redisson-spring-boot-starter:${libs.versions.redisson.get()}"

    // Prometheus metrics endpoint for Actuator
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // PDF导出 - iText 8
    implementation "com.itextpdf:itext-core:${libs.versions.itext.get()}"
    implementation "com.itextpdf:font-asian:${libs.versions.itext.get()}"

    // Aliyun DashScope SDK for Qwen3 ASR/TTS (replaces NLS SDK)
    implementation('com.alibaba:dashscope-sdk-java:2.22.7') {
        exclude group: 'org.slf4j', module: 'slf4j-simple' // 使用 Spring Boot 的 Logback
    }

    // Jakarta annotation for Java 21+ (replaces javax.annotation)
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    // Lombok
    compileOnly libs.lombok
    annotationProcessor libs.lombok

    // MapStruct - 对象映射 (必须在Lombok之后配置)
    implementation "org.mapstruct:mapstruct:${libs.versions.mapstruct.get()}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${libs.versions.mapstruct.get()}"
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// 全局UTF-8编码配置
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useJUnitPlatform()
}

// 将仓库根目录 .env 注入 bootRun，便于本地加载 AI_BAILIAN_API_KEY 等变量（Gradle 进程默认不读 .env）
// 同时确保 JVM 使用 UTF-8 编码
tasks.named('bootRun') {
    // JVM 编码配置（stdout/stderr：JDK 18+，避免控制台 PrintStream 与 Logback UTF-8 不一致）
    jvmArgs = [
            '-Dfile.encoding=UTF-8',
            '-Dconsole.encoding=UTF-8',
            '-Dstdout.encoding=UTF-8',
            '-Dstderr.encoding=UTF-8'
    ]

    // 加载 .env 文件
    def envFile = rootProject.file('.env')
    if (envFile.exists()) {
        envFile.eachLine { line ->
            def trimmed = line.trim()
            if (trimmed.isEmpty() || trimmed.startsWith('#')) {
                return
            }
            def eq = trimmed.indexOf('=')
            if (eq <= 0) {
                return
            }
            def key = trimmed.substring(0, eq).trim()
            def val = trimmed.substring(eq + 1).trim()
            if ((val.startsWith('"') && val.endsWith('"')) || (val.startsWith("'") && val.endsWith("'"))) {
                val = val.substring(1, val.length() - 1)
            }
            environment key, val
        }
    }
}
